2020-09-22 
	Ajuste Formulario Caña

2020-09-17 
	Elaboración de project con ajustes finales

2020-08-31 
	StockFabrica: Detalles para totales generales

2020-08-29 
	StockFabrica: Silos Producto Terminado
	StockFabrica: Recibidores de Miel Final - Melaza

2020-08-28 
	StockFabrica: Recibidores de Mieles en las Centrifugas
	StockFabrica: Fundidores
	StockFabrica: Cristaliz Vertical

2020-08-28 
	StockFabrica: Recibidores de Magmas - Planta Baja
	StockFabrica: Alimentadores de la centrifugas

2020-08-27 
	StockFabrica: Recibidores de Magma B y Masas A - B - C
	Cambio de indicador VT(13) por Vt(12)

2020-08-14 
	Indicador.groovy copia de Material

2020-08-13 
	Blc Variables primarias Azúcar Granel
	Blc Variables primarias Cachaza
	Blc Variables primarias Jugo Residual
	Blc Variables primarias Jugo Primera Extracción
	Blc Variables primarias Jugo Claro
	Blc Variables primarias Jugo Diluido
	Ajuste Cto24HTest

2020-08-09 
	Mostrar listado después de Ingenio.save
	class IngenioSaveAction extends ViewBaseAction implements IChainAction, IChangeModeAction{

2020-08-08 
	Reemplazo de Util.instance.toTimestamp(hora, fecha) por SqlUtil.instance.obtenerFecha(hora, diaTrabajoId)

2020-08-07 
	Cambiar tamano hora en instancias de Formulario
	Módulo TurnoTrabajo
	Parametrizar turnos en DisTrabajo

2020-08-06 
	Agregar registros en DescriptionsList	
	Parametro DIA_TRABAJO_UN_REGISTRO (S/N)
	Ajustes en Cto24H
	Modificar Test para escoger secciones
	Parametrizar factor felining y fr
	Ajuste de títulos en las instancias de Formulario

2020-08-05 
	Agregar XOrderBy("hora") en todos las instancias de Formulario
	Ajuste en controllers.xml para heredar de Ingenio

2020-08-05 
	Renombrar getFormulario() a getDiaTrabajo()
	Renombrar DiaTrabajo a Formulario

2020-08-04 
	Blc grabar totales de paro

2020-08-03 
	Blc sección: Tiempos
	Agregar campo a entidad Material

2020-07-31 
	Controlador BlcConsultarAction

2020-07-30 
	Propiedad calculada para colecciones

2020-07-29 