@@ -158,6 +158,7 @@ titRecMieFinMel=Recibidores de Miel Final - Melaza
 titRecMieFinMel1=Recib Melaza
 titRecMieFinMel2=Tanque Miel Final I
 titRecMieFinMel3=Tanque Miel Final II
+titDetalle=Detalle
 titTotales=Totales
 titTotTonSac=Totales Ton Sac
 titTotGen=Totales Generales
