@@ -1,3 +1,6 @@
+2020-09-23 
+	Agregar totales en StockProcesoP
+
 2020-09-22 
 	Ajuste Formulario Caña
 
